--- a/.github/workflows/TestApplicationBackendAPI.yml
+++ b/.github/workflows/TestApplicationBackendAPI.yml
@@ -46,3 +46,4 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.TestApplicationBackendAPI_6DFF }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        images:
