Testing in CI mode disabled in the workflow

--- a/.github/workflows/UI_workflow1.yaml
+++ b/.github/workflows/UI_workflow1.yaml
@@ -20,7 +20,7 @@ jobs:
           - name: Run automated tests
             run: ng test --code-coverage
             env:
-                CI: true
+                CI: false
             working-directory: UI
           - name: Build Angular app
             run: ng build --configuration=production
