--- a/.github/workflows/UI_workflow1.yaml
+++ b/.github/workflows/UI_workflow1.yaml
@@ -31,7 +31,7 @@ jobs:
             uses: actions/upload-artifact@v2
             with:
               name: code-coverage
-              path: coverage
+              path: UI/coverage
           - name: Build Angular app
             if: github.event_name == 'push'
             run: ng build --configuration=production
