--- a/.github/workflows/UI_workflow1.yaml
+++ b/.github/workflows/UI_workflow1.yaml
@@ -3,11 +3,13 @@ on:
   push:
       branches:
           - 'dev'
+          - 'main'
   pull_request:
       types: 
           - opened
       branches:
           - 'dev'
+          - 'main'
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -48,3 +50,20 @@ jobs:
             with:
                 name: angular-app
                 path: UI/dist/
+    deploy:
+      runs-on: ubuntu-latest
+      needs: build      
+      steps:
+        - name: Download build from the build job
+          uses: actions/download-artifact@v3
+          with:
+            name: angular-app
+            path: UI/dist/
+        - name: Display structure of downloaded files
+          run: ls -R
+          working-directory: UI/dist/
+        - name: Create a Release
+          if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+          run: npx semantic-release
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
