patch: update workflow

--- a/.github/workflows/UI_workflow1.yaml
+++ b/.github/workflows/UI_workflow1.yaml
@@ -55,6 +55,7 @@ jobs:
       needs: build      
       steps:
         - name: Download build from the build job
+          if: github.event_name == 'push'
           uses: actions/download-artifact@v3
           with:
             name: angular-app
