--- a/.github/workflows/UI_workflow1.yaml
+++ b/.github/workflows/UI_workflow1.yaml
@@ -53,6 +53,7 @@ jobs:
                 name: angular-app
                 path: UI/dist/
     deploy:
+      if: github.event_name == 'push'
       runs-on: ubuntu-latest
       needs: build      
       steps:
