--- a/.github/workflows/UI_workflow1.yaml
+++ b/.github/workflows/UI_workflow1.yaml
@@ -46,6 +46,11 @@ jobs:
             if: github.event_name == 'push'
             run: ng build --configuration=production
             working-directory: UI
+          - name: Create a Release
+            if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+            run: npx semantic-release
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           - name: Upload build artifact
             if: github.event_name == 'push'
             uses: actions/upload-artifact@v2
@@ -55,7 +60,7 @@ jobs:
     deploy:
       if: github.event_name == 'push'
       runs-on: ubuntu-latest
-      needs: build      
+      needs: build       
       steps:
         - name: Download build from the build job          
           uses: actions/download-artifact@v3
@@ -65,8 +70,12 @@ jobs:
         - name: Display structure of downloaded files
           run: ls -R
           working-directory: UI/dist/
-        - name: Create a Release
-          if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-          run: npx semantic-release
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - name: Deploy to Azure Web App
+          uses: azure/webapps-deploy@v2
+          id: deploy-to-webapp
+          with:
+            app-name: 'MyProjectUI'            
+            publish-profile: ${{ secrets.TestApplicationBackendAPI_6DFF }}
+            package: UI/dist/
+            images: 
+        
