--- a/.github/workflows/UI_workflow1.yaml
+++ b/.github/workflows/UI_workflow1.yaml
@@ -74,6 +74,6 @@ jobs:
           with:
             app-name: 'MyProjectUI'            
             publish-profile: ${{ secrets.MYPROJECTUIPUBLISHPROFILE }}
-            package: .
+            package: ./ui
             images: 
         
