--- a/.github/workflows/email.yaml
+++ b/.github/workflows/email.yaml
@@ -25,7 +25,7 @@ jobs:
           echo "Commit: ${{ github.event.workflow_run.head_commit.id }}" >> email-body.txt
           echo "Commit Message: ${{ github.event.workflow_run.head_commit.message }}" >> email-body.txt
           echo "Commit URL: ${{ github.event.workflow_run.head_commit.url }}" >> email-body.txt
-          echo "Sender: ${{ secrets.FROM_EMAIL }}" >> email-body.txt
+          echo "Sender: tresams362@gmail.com" >> email-body.txt
           cat email-body.txt
 
       - name: Send email notification
@@ -33,9 +33,9 @@ jobs:
         with:
           server_address: smtp.sendgrid.net
           server_port: 587
-          username: "apikey"
+          username: apikey
           password: ${{ secrets.SENDGRID_API_KEY }}
           subject: "Workflow Completed: ${{ github.event.workflow_run.name }}"
           body: $(cat email-body.txt)
-          to: ${{ secrets.TO_EMAIL }}
-          from: ${{ secrets.FROM_EMAIL }}
+          to: msebastian@sonicwall.com
+          from: tresams362@gmail.com
