--- a/.github/workflows/email.yaml
+++ b/.github/workflows/email.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Send email notification
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: 10.50.129.54
+          server_address: webmail.sonicwall.com
           server_port: 465
           username: "APAdminqa_op"
           password: "3flatGROUNDtown66"
